cursor on mobile fix

--- a/style.css
+++ b/style.css
@@ -128,6 +128,14 @@ button:hover ~ .cursor {
   .side-nav {
     display: none;
   }
+  
+  * {
+    cursor: auto !important;
+  }
+
+  .cursor {
+    display: none;
+  }
 }
 
 html {
